<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">第一彩票</string>
    <string name="appdb">THEFIRSTLOTTERY</string>
    <!--Source for Scan the QR Code-->
    <string name="placeHolder">placeHolder</string>
    <string name="seekbar_add">+</string>
    <string name="seekbar_minus">-</string>
    <string name="create">生成</string>
    <string name="scan_failed">扫描失败</string>
    <string name="bottom_hint">建议与镜头保持10CM距离，尽量避免逆光和阴影</string>
    <string name="top_hint">将条形码或二维码置于取景框内系统会自动扫描</string>
    <string name="cancel">取消</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="button_ok">确定</string>


    <string name = "login">登录</string>
    <string name = "phone">手&#160;&#160;机&#160;&#160;号</string>
    <string name = "verification_code">验&#160;&#160;证&#160;&#160;码</string>
    <string name = "password">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码</string>
    <string name = "new_password">新密码</string>
    <string name = "affirmPassWord">确认密码</string>
    <string name = "get_verification_code">获取验证码</string>
    <!--个人资料 -->
    <string name="label_email">邮箱&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="label_name">真实姓名&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="label_card">身份证&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="label_bank_name">绑定银行&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="label_bank_card">绑定银行卡号</string>
    <!--修改密码 -->
    <string name="label_old_password">旧密码&#160;&#160;&#160;&#160;</string>
    <string name="label_new_password">新密码&#160;&#160;&#160;&#160;</string>
    <string name="label_confirm_password">确认密码</string>
</resources>

