<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res/com.evstudio.thefirstlottery.mobile">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout  android:layout_width="match_parent"  android:layout_height="55dp"
            android:layout_marginTop="8dp" android:background="@drawable/bg_login" android:gravity="center_vertical" >
            <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/label_old_password" android:textColor="@color/font"
                android:textSize="@dimen/BasicTextSize"  android:paddingLeft="15dp" />
            <View android:layout_width="0.5dp" android:layout_height="20dp" android:background="@color/line"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"></View>
            <com.evstudio.thefirstlottery.mobile.view.CleanableEditText
                android:id="@+id/etOldPassword" android:layout_width="0dp" android:layout_height="30dp"
                android:layout_weight="1" android:hint="请输入旧密码" android:textColor="@color/font"
                android:textSize="@dimen/BasicTextSize" android:background="@null"  android:paddingLeft="10dp"
                android:drawableRight="@drawable/clean"  android:inputType="textPassword"/>
        </LinearLayout>
        <LinearLayout  android:layout_width="match_parent"  android:layout_height="55dp"
            android:layout_marginTop="8dp" android:background="@drawable/bg_login" android:gravity="center_vertical" >
            <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/label_new_password" android:textColor="@color/font"
                android:textSize="@dimen/BasicTextSize"  android:paddingLeft="15dp" />
            <View android:layout_width="0.5dp" android:layout_height="20dp" android:background="@color/line"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"></View>
            <com.evstudio.thefirstlottery.mobile.view.CleanableEditText
                android:id="@+id/etNewPassword" android:layout_width="0dp" android:layout_height="30dp"
                android:layout_weight="1" android:hint="请输入新密码" android:textColor="@color/font"
                android:textSize="@dimen/BasicTextSize" android:background="@null"  android:paddingLeft="10dp"
                android:drawableRight="@drawable/clean"  android:inputType="textPassword"/>
        </LinearLayout>
        <LinearLayout  android:layout_width="match_parent"  android:layout_height="55dp"
            android:layout_marginTop="8dp" android:background="@drawable/bg_login" android:gravity="center_vertical" >
            <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/label_confirm_password" android:textColor="@color/font"
                android:textSize="@dimen/BasicTextSize"  android:paddingLeft="15dp" />
            <View android:layout_width="0.5dp" android:layout_height="20dp" android:background="@color/line"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"></View>
            <com.evstudio.thefirstlottery.mobile.view.CleanableEditText
                android:id="@+id/etConfirmPassword" android:layout_width="0dp" android:layout_height="30dp"
                android:layout_weight="1" android:hint="" android:textColor="@color/font"
                android:textSize="@dimen/BasicTextSize" android:background="@null"  android:paddingLeft="10dp"
                android:drawableRight="@drawable/clean"  android:inputType="textPassword"/>
        </LinearLayout>


        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btnLoginSubmit"
            style="@style/BootstrapButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            bootstrapbutton:bb_roundedCorners="true"
            android:layout_marginTop="40dp"
            android:text="保存"
            bootstrapbutton:bb_type="primary"
            app:bb_text_gravity="center"
            android:background="@drawable/button_background_states"/>
    </LinearLayout>
</ScrollView>